# txt2midi

./: .gitignore  README.md  main.py  pyproject.toml
diagrams/: classes.mmd  interface.mmd  midi.mmd  playback.mmd
src/: audio.py  config.py  constantes.py  eventos.py  modelo.py  processador.py  servicos_audio.py  ui.py
src/application/: controller.py
src/domain/: events.py  models.py  parser.py
src/infrastructure/: audio_player.py  midi_exporter.py  midi_importer.py
src/ui/: components.py  main_window.py  standard.lang  tcp.lang
src/ui/blueprints/: config_panel.blp  config_panel.ui  editor_page.blp  editor_page.ui  main_window.blp  main_window.ui  text_editor.blp  text_editor.ui
src/ui/lang/: mml.lang  standard.lang  tcp.lang
typings/fluidsynth/: __init__.pyi
typings/midiutil/: MidiFile.pyi  __init__.pyi
