[project]
name = "txt2midi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["midiutil>=1.2.1", "pyfluidsynth>=1.3.4", "pygobject>=3.54.5"]

[dependency-groups]
dev = ["basedpyright>=1.34.0", "pygobject-stubs>=2.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
exclude = ["typings"]
extend = "~/.config/ruff/ruff.toml"

[tool.ruff.lint]
ignore = ["S311"]
